--- a/notice/notice-Home.html
+++ b/notice/notice-Home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>http://127.0.0.1:5500/html/index.html#
+<!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
@@ -12,27 +12,28 @@
 
 
   <body>
-    <nav>
-      <a href="../html/index.html"><img src="../img/Yocci_SVG_preview_rev_1.png"width="auto" height="100vh" alt="ホーム"></a>
-      <ul class="nav-links">
-        <li><a href="../Tavern/Tavern-Home.html">酒場情報</a></li>
-        <li><a href="../Pirate King Adventures/PKA-Home.html">海賊王への軌跡</a></li>
-        <li><a href="../Treasure Map/TM-Home.html">トレジャーマップ</a></li>
-        <li><a href="../Kizuna Clash/KC-Home.html">絆決戦</a></li>
-        <li><a href="../Events/Events-Home.html">イベント</a></li>
-      </ul>
-      <div class="burger">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
+      <nav>
+        <div class="box" id="makeImg"></div>
+        <a href="../html/index.html"><img src="../img/Yocci_SVG_preview_rev_1.png"width="auto" height="100vh" alt="ホーム"></a>
+        <ul class="nav-links">
+          <li><a href="../Tavern/Tavern-Home.html">酒場情報</a></li>
+          <li><a href="../Pirate King Adventures/PKA-Home.html">海賊王への軌跡</a></li>
+          <li><a href="../Treasure Map/TM-Home.html">トレジャーマップ</a></li>
+          <li><a href="../Kizuna Clash/KC-Home.html">絆決戦</a></li>
+          <li><a href="../Events/Events-Home.html">イベント</a></li>
+        </ul>
+        <div class="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+      </nav>
+  
+      <div class="siteLink">
+          <a href="https://twitter.com/1yoccccci7" target="_blank"> <img src="../img/logo-black.png"  alt="X" width="50" height="auto"></a>
+  
+          <a href="https://www.youtube.com/channel/UCrW2L9sQW8TVwfrxz-fjXHA" target="_blank"> <img src="../img/7ed4a324620f9d17ae73322329e028b9_preview_rev_1.png" alt="Youtube" width="60" height="auto"></a>
       </div>
-    </nav>
-
-    <div class="siteLink">
-        <a href="https://twitter.com/1yoccccci7" target="_blank"> <img src="../img/logo-black.png"  alt="X" width="50" height="auto"></a>
-
-        <a href="https://www.youtube.com/channel/UCrW2L9sQW8TVwfrxz-fjXHA" target="_blank"> <img src="../img/7ed4a324620f9d17ae73322329e028b9_preview_rev_1.png" alt="Youtube" width="60" height="auto"></a>
-    </div>
 
 
 
